[package]
name = "logd"
version = "0.1.0"
edition = "2021"
description = "Log Daemon - Redstone OS"

[[bin]]
name = "logd"
path = "src/main.rs"
test = false
bench = false

[dependencies]
redpowder = { path = "../../redpowder" }

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
