[package]
name = "logd"
version = "0.1.0"
edition = "2021"
description = "Log Daemon - Redstone OS"

[[bin]]
name = "logd"
path = "src/main.rs"
test = false
bench = false

[dependencies]
redpowder = { path = "../../redpowder" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = false


[profile.opt-release]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = false
incremental = false
